--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,26 @@
 
 <div class="indexImg">
+    <div class="title">
+    <h1>Neighborhood Helper</h1>
     <a href=""><h3>Become A Member</h3><a>
     <img src="https://blogapi.uber.com/wp-content/uploads/2019/01/6-barrios-de-Guayaquil-que-te-deslumbrar%C3%A1n-por-sus-edificaciones.png" alt="">
+    </div>
+</div>
+
+<div class="landingCard">
+    <div class="card">
+        <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20262%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
+        <h2>Help your neighbords</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+    </div>
+    <div class="card">
+        <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20269%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
+        <h2>Help your neighbords</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+    </div>
+    <div class="card">
+        <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20270%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
+        <h2>Help your neighbords</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+    </div>
 </div>
