--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <div class="indexImg">
     <div class="title">
     <h1>Neighborhood Helper</h1>
-    <a href=""><h3>Become A Member</h3><a>
+    <a href="/auth/signup"><h3>Become A Member</h3><a>
     <img src="https://blogapi.uber.com/wp-content/uploads/2019/01/6-barrios-de-Guayaquil-que-te-deslumbrar%C3%A1n-por-sus-edificaciones.png" alt="">
     </div>
 </div>
