--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="navBar">
-      
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <div class="navTrans">
+    <div class="logo">
+      <img
+        src="https://banner2.cleanpng.com/20180401/dbq/kisspng-user-profile-computer-icons-profile-5ac09245049c32.0935523415225697970189.jpg"
+        alt="logo">
     </div>
-    {{{body}}}
-  </body>
+    <div class="navBar">
+      <a href="/">Home</a>
+      <a href="/auth/signup">SingUp</a>
+      <a href="/auth/login">LogIn</a>
+      <a href="/logout">LogOut</a>
+
+    </div>
+  </div>
+  {{{body}}}
+</body>
+
 </html>
