--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <div class="title">
     <h1>Neighborhood Helper</h1>
     <a href="/auth/signup"><h3>Become A Member</h3><a>
-    <img src="https://blogapi.uber.com/wp-content/uploads/2019/01/6-barrios-de-Guayaquil-que-te-deslumbrar%C3%A1n-por-sus-edificaciones.png" alt="">
+    <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="">
     </div>
 </div>
 
