--- a/views/auth/logIn.hbs
+++ b/views/auth/logIn.hbs
@@ -1,3 +1,5 @@
+<div class="signup">
+<img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="">
 <form action="/auth/login" method="POST">
     <label for="">Email</label>
     <input type="text" name="email">
@@ -8,3 +10,4 @@
     </div>
     <button type="submit" value="Submit">Submit !</button>
 </form>
+</div>
