--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
       <a href="/">Home</a>
       <a href="/auth/signup">SingUp</a>
       <a href="/auth/login">LogIn</a>
-      <a href="/logout">LogOut</a>
+      <a href="/">LogOut</a>
 
     </div>
   </div>
