--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,15 +9,17 @@
 <body>
   <div class="navTrans">
     <div class="logo">
-      <img
-        src="https://banner2.cleanpng.com/20180401/dbq/kisspng-user-profile-computer-icons-profile-5ac09245049c32.0935523415225697970189.jpg"
-        alt="logo">
+      <a href="/auth/private/profile">
+        <img
+          src="https://banner2.cleanpng.com/20180401/dbq/kisspng-user-profile-computer-icons-profile-5ac09245049c32.0935523415225697970189.jpg"
+          alt="logo">
+      </a>
     </div>
     <div class="navBar">
       <a href="/">Home</a>
       <a href="/auth/signup">SingUp</a>
       <a href="/auth/login">LogIn</a>
-      <a href="/">LogOut</a>
+      <a href="/auth/logout">LogOut</a>
 
     </div>
   </div>
