parece que funciona

--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -19,7 +19,7 @@
     <p>You have nothing to do</p>
 {{/unless}}
 <br>
-<a href="/auth/create-todo">create a todo</a>
+<a href="/create-todo">create a todo</a>
 
 <form action="/priv/logout" method="post">
 <button>log-out</button>
