--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
 <body>
   <div class="navTrans">
     <div class="logo">
-      <a href="/auth/private/profile">
+      <a href="/profile">
         <img
           src="https://banner2.cleanpng.com/20180401/dbq/kisspng-user-profile-computer-icons-profile-5ac09245049c32.0935523415225697970189.jpg"
           alt="logo">
@@ -20,7 +20,7 @@
       <a href="/auth/signup">SingUp</a>
       <a href="/auth/login">LogIn</a>
       <a href="/auth/logout">LogOut</a>
-
+      <a href="/create-task">Create Task</a>
     </div>
   </div>
   {{{body}}}
