--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,9 @@
       </a>
     </div>
     <div class="navBar">
+      {{#if currentUser}}
+      <p>holaaaaa {{currentUser.name}}</p>
+      {{/if}}
       <a href="/">Home</a>
       <a href="/auth/signup">SingUp</a>
       <a href="/auth/login">LogIn</a>
