task: ok - profile: casi

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
     </div>
     <div class="navBar">
       {{#if currentUser}}
-      <p>holaaaaa {{currentUser.name}}</p>
+      <p>Hello {{currentUser.name}}</p>
       {{/if}}
       <a href="/">Home</a>
       <a href="/auth/signup">SingUp</a>
