--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -1,26 +1,26 @@
-<h1> Hi {{username}}, here is your TO-DO list:</h1>
+<h1> Hi {{currentUser.name}}, here is your TO-DO list:</h1>
 
-{{#each todoList}}
-    <div class="todo-card">
-        <h2>{{name}}</h2>
-        <p>{{message}}</p>
-        <p> completed: {{done}}</p>
 
-        {{#unless done }}
-            <a class="button" href="/priv/completed-todo/{{_id}}">completed</a>
-        {{/unless}}
+<div class="todo-card">
+    <h2>{{currentUser.name}}</h2>
+    <p>{{currentUser.email}}</p>
 
-        <a class="button" href="/priv/delete-todo/{{_id}}">delete</a>
-    </div>
-    
+
+    <p> completed: {{done}}</p>
+
+    {{#unless done }}
+    <a class="button" href="/priv/completed-todo/{{_id}}">completed</a>
+    {{/unless}}
+
+    <a class="button" href="/priv/delete-todo/{{_id}}">delete</a>
+</div>
+{{#each newTask}}
+   {{newTask}}
 {{/each}}
 
-{{#unless todoList}}
-    <p>You have nothing to do</p>
+
+{{#unless newTask}}
+<p>You have nothing to do</p>
 {{/unless}}
 <br>
 <a href="/create-todo">create a todo</a>
-
-<form action="/priv/logout" method="post">
-<button>log-out</button>
-</form>
