--- a/views/private/task-details.hbs
+++ b/views/private/task-details.hbs
@@ -2,7 +2,7 @@
    <h1>{{name}}</h1> 
    <h3>{{description}}</h3>
 
-   <form action="" method="POST">
+   <form action="/{{id}}/users" method="POST">
         <button type="submit">Accept</button>
    </form>
 </div>
