--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -1,10 +1,17 @@
 <div class="todo-card">
     <h1> Hi {{user.name}}, Welcome to your Profile</h1>
-    <p>{{user.email}}</p>
     <img src="{{user.picture}}" width="150px"alt="">
+    <p>{{user.email}}</p>
+     <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q={{user.direction}}+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html"></a></iframe></div>
 
+    <a href="/create-task">Create new task</a>
+</div>
+<div>
     <div class="flex-wrap">
         <h1>My task to do for someone</h1>
+    </div>
+    
+    <div class="flex-wrap">
         {{#each user.tasks}}
         <div class="tasks">
             <h1>Name: {{this.name}}</h1>
@@ -19,9 +26,10 @@
         <p>You have nothing to do</p>
         {{/each}}
     </div>
-
     <div class="flex-wrap">
-        <h1>Tasks I'll do</h1>
+    <h1>Tasks I'll do</h1>
+    </div>
+    <div class="flex-wrap">
         {{#each user.requests}}
         <div class="tasks">
             <h1>Name: {{this.name}}</h1>
@@ -39,5 +47,3 @@
 </div>
 
 
-<br>
-<a href="/create-task">Create new task</a>
