--- a/views/private/users.hbs
+++ b/views/private/users.hbs
@@ -1,10 +1,12 @@
 
 <div>
-    <div>
+    
+    <div class="usersCard">
         {{#each allUsers}}
         <div class="tasks">
-            <h1>Name: {{this.name}}</h1>
-            <h2>Direction: {{this.direction}}</h2>
+            
+            <h1>{{this.name}}</h1>
+            <h2>{{this.direction}}</h2>
             <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q={{this.direction}}+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html"></a></iframe></div>
             
                 <ul>
