--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,10 +21,14 @@
       <h1>Hello {{currentUser.name}}</h1>
       {{/if}}
       <a href="/">Home</a>
-      <a href="/auth/signup">SingUp</a>
-      <a href="/auth/login">LogIn</a>
+      {{#if currentUser}}
       <a href="/auth/logout">LogOut</a>
       <a href="/users">Help Someone</a>
+      {{else}}
+      <a href="/auth/signup">SingUp</a>
+      <a href="/auth/login">LogIn</a>
+      {{/if}}
+      
     </div>
   </div>
   <div class="gradiant">
