--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -5,6 +5,7 @@
      <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q={{user.direction}}+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html"></a></iframe></div>
 
     <a href="/create-task">Create new task</a>
+    <a href="/{{user._id}}/edit-profile">Edit Profile</a>
 </div>
 <div>
     <div class="flex-wrap">
