--- a/views/private/edit-profile.hbs
+++ b/views/private/edit-profile.hbs
@@ -1,19 +1,19 @@
 <h1>Edit Taks</h1>
 
-<form action="/{{_id}}/edit-profile" method="post">
+<form action="/{{_id}}/edit-profile" enctype="multipart/form-data" method="post">
     <label for="name">Name:</label>
-    <input type="text" name="name"  value="{{name}}">
+    <input type="text" name="name" value="{{name}}">
     <label for="email">Email:</label>
     <input type="text" name="email" value="{{email}}">
-    <label for="direction">Direction::</label>
+    <label for="direction">Direction:</label>
     <input type="text" name="direction" value="{{direction}}">
     <label for="picture">Picture:</label>
-    <input type="file" name="picture">
+    <input type="file" name="picture" value="{{picture}}">
 
-    <button type="submit"> Edit! </button>
+<button type="submit"> Edit! </button>
 </form>
 
 {{#if message}}
-    <p>{{message}}</p>
-    <a href="/">go back</a>
+<p>{{message}}</p>
+<a href="/">go back</a>
 {{/if}}
