--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -1,3 +1,4 @@
+<div class="profile-card">
 <div class="todo-card">
     <h1> Hi {{user.name}}, Welcome to your Profile</h1>
     <img src="{{user.picture}}" width="150px"alt="">
@@ -7,6 +8,9 @@
     <a href="/create-task">Create new task</a>
     <a href="/{{user._id}}/edit-profile">Edit Profile</a>
 </div>
+
+</div>
+
 <div>
     <div class="flex-wrap">
         <h1>My task to do for someone</h1>
