--- a/views/private/create-task.hbs
+++ b/views/private/create-task.hbs
@@ -1,6 +1,6 @@
-<div class="create-task">
+<div class="profile-card">
 
-<div>
+<div class="tasks">
 <h1>Create a new To-do:</h1>
 
 <form action="/create-task" method="post">
@@ -13,7 +13,7 @@
 
 {{#if message}}
     <p>{{message}}</p>
-    <a href="/">go back</a>
+    <a href="/profile">go back</a>
 {{/if}}
 
 </div>
