--- a/views/private/edit-profile.hbs
+++ b/views/private/edit-profile.hbs
@@ -1,14 +1,18 @@
+<div class="profile-card">
+
+
+<div class="tasks">
 <h1>Edit Taks</h1>
 
 <form action="/{{_id}}/edit-profile" enctype="multipart/form-data" method="post">
-    <label for="name">Name:</label>
-    <input type="text" name="name" value="{{name}}">
-    <label for="email">Email:</label>
-    <input type="text" name="email" value="{{email}}">
-    <label for="direction">Direction:</label>
-    <input type="text" name="direction" value="{{direction}}">
-    <label for="picture">Picture:</label>
-    <input type="file" name="picture" value="{{picture}}">
+    <label for="name">Name:</label><br>
+    <input type="text" name="name" value="{{name}}"><br>
+    <label for="email">Email:</label><br>
+    <input type="text" name="email" value="{{email}}"><br>
+    <label for="direction">Direction:</label><br>
+    <input type="text" name="direction" value="{{direction}}"><br>
+    <label for="picture">Picture:</label><br>
+    <input type="file" name="picture" value="{{picture}}"><br>
 
 <button type="submit"> Edit! </button>
 </form>
@@ -17,3 +21,6 @@
 <p>{{message}}</p>
 <a href="/">go back</a>
 {{/if}}
+
+</div>
+</div>
