--- a/views/private/create-task.hbs
+++ b/views/private/create-task.hbs
@@ -1,7 +1,7 @@
 <div class="profile-card">
 
 <div class="tasks">
-<h1>Create a new To-do:</h1>
+<h1>Create Task:</h1>
 
 <form action="/create-task" method="post">
     <label>Task name:</label><br>
