--- a/views/private/edit-profile.hbs
+++ b/views/private/edit-profile.hbs
@@ -2,7 +2,7 @@
 
 
 <div class="tasks">
-<h1>Edit Taks</h1>
+<h1>Edit Profile</h1>
 
 <form action="/{{_id}}/edit-profile" enctype="multipart/form-data" method="post">
     <label for="name">Name:</label><br>
