--- a/views/private/task-details.hbs
+++ b/views/private/task-details.hbs
@@ -1,8 +1,9 @@
-<div>
-   <h1>{{name}}</h1> 
-   <h3>{{description}}</h3>
-
-   <form action="/{{id}}/users" method="POST">
-        <button type="submit">Accept</button>
-   </form>
+<div class="profile-card">
+   <div class="tasks">
+      <h1>{{name}}</h1>
+      <h3>{{description}}</h3>
+      <form action="/{{id}}/users" method="POST">
+         <button type="submit">Accept</button>
+      </form>
+   </div>
 </div>
