--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,16 +11,16 @@
     <div class="card">
         <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20262%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
         <h2>Help your neighbords</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+        <p>Help your neighbors in their day to day to create a more united community</p>
     </div>
     <div class="card">
         <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20269%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
-        <h2>Help your neighbords</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+        <h2>Ask for help</h2>
+        <p>Ask your neighbors for help with tasks that are impossible for you to do</p>
     </div>
     <div class="card">
         <div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=400&hl=es&q=napoles%20270%20barcelona+(Mi%20nombre%20de%20egocios)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Planificador de Ruta</a></iframe></div><br />
-        <h2>Help your neighbords</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione quo architecto at omnis illo iste molestiae officia aliquid culpa amet non tenetur, asperiores exercitationem facere nulla eum libero. Pariatur?</p>
+        <h2>United community</h2>
+        <p>Create a united community thanks to disinterested neighborhood collaboration</p>
     </div>
 </div>
