--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,16 @@ body {
   position: relative;
   display: inline;
   border-radius: 15px;
-  height: 70px;
+  width: 70px;
+}
+.profilePic img:hover{
+  width: 300px;
+  position: absolute;
+  transition: 1s;
+  border: 2px solid black;
+  -webkit-box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
+-moz-box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
+box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
 }
 
 .navBar {
