--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -263,9 +263,6 @@ box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
   justify-content: space-evenly;
   width: 100;
   background-size: contain;
-  -webkit-box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
--moz-box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
-box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
  }
 
 
@@ -316,4 +313,14 @@ box-shadow: 22px 13px 24px -1px rgba(0,0,0,0.47);
 .todo-card img{
 
   margin-left: 248px;
+}
+.notifications button{
+  border-radius: 50%;
+  background-color: red;
+  border: none;
+  padding: 5px;
+  margin-right: 10px;
+  width: 25px;
+  color: white;
+}
 }
