--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,10 +2,13 @@
 <div class="indexImg">
     
     <h1>Neighborhood Helper</h1>
-    <a href="/auth/signup"><h3>Become A Member</h3><a>
     <img src="https://cdn.pixabay.com/photo/2018/03/14/23/00/barcelona-3226639_1280.jpg" alt="">
  
 </div>
+
+<h1 class="explain">What could you do?</h1>
+    <a class="explaina" href="/auth/signup"><h2 style="color: white; text-align:center;">Become A Member</h2><a>
+
 
 <div class="landingCard">
     <div class="card">
